--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,30 @@
 /* CSS Page for Sandbox Chatbot by Angela Tomita */
 
-@import url('htt;s://fonts.googleapis.com/css?family-Asap:400,500,700');
+
+  @import url('https://fonts.googleapis.com/css2?family=Asap:wght@400;500;700&display=swap');
 
 /*Universal selector*/
 * {
   margin: 0;
-  padding 0;
+  padding: 0;
   box-sizing: border-box;
   }
 
 body {
-  background-color: blue;
-/*  background-color: #24272E */
+  background-color: #24272E;
   }
 
- 
+header {
+  background: white;
+  padding: 20px;
+  }
+
+header > h1 {
+  color: #24272E;
+  text-align: center;
+  font-family: Asap, sans-serif;
+  }
+
+.score-board {
+  border: 3px solid white;
+  }
